examples/test/testpolicy15335.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15335
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key5: value20
      key46: value45
      key45: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value18
          key44: value46
          key29: value5
